--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <button class="dropdown-btn"> Olimpiada </button>
           <div class="dropdown-container">
             <a href="./pages/programa.html">Programa</a>
-            <a href="#">Despre</a>
+            <a href="./pages/Despre.html">Despre</a>
             <a href="#">Probleme si subiecte</a>
           </div>
         </li>
