moved the video to res/homepage

--- a/pages/programa.html
+++ b/pages/programa.html
@@ -10,7 +10,7 @@
   <body>
     <aside>
       <figure>
-        <img id="sideLogo" src='../res/common/AHL.png'/>
+        <img id="sideLogo" src='../res/common/AHL.pgng'/>
         <figcaption>AstronomyHub</figcaption>
       </figure>
       <img id="button_menu" src="../res/common/menu.png"/>
