--- a/pages/programa.html
+++ b/pages/programa.html
@@ -10,8 +10,8 @@
   <body>
     <aside>
       <figure>
-        <img id="sideLogo" src='../res/common/AHL.pgng'/>
-        <figcaption>AstronomyHub</figcaption>
+        <img id="sideLogo" src='../res/common/AHL.png'/>
+        <figcaption>AstronomyHub</figcaption>z
       </figure>
       <img id="button_menu" src="../res/common/menu.png"/>
       <nav >
