--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main>
         <div>
             <video width="500" autoplay muted loop>
-                <source src="logo.mp4" type="video/mp4">
+                <source src="./res/homepage/logo.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
