--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -1,8 +1,19 @@
-<html>
-  <head>
-    <title></title>
-    <meta content="">
-    <style></style>
-  </head>
-  <body></body>
-</html>
+  <div>
+    <video autoplay muted loop>
+        <source src="./res/homepage/logo.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+    </video>
+  </div>
+
+  <iframe width="0" height="0" src="./res/common/Astronomy.mp3" frameborder="0" allowfullscreen></iframe>
+  <h1>Bine ati venit !</h1>
+  <p>
+      Daca te pasioneaza universul, vrei sa studiezi astronomia si astrofizica
+      sau vrei doar sa te relaxezi citind despre acestea ai ajuns in locul potrivit.
+  </p>
+  <p>Carti, articole, filme, lunk-uri, aici puteti gasi absolut tot in legatura cu astronomia</p>
+  <p>
+      De asemenea, daca esti elev din Cluj, te asteptam sa faci parte din grupul nostru.
+      Organizam ore de pregatire pentru Olimpiada, nopti de observatie si multe altele!
+  </p>
+  <a href="../lectii/index.html" class="cta">Incepe!</a>
