slowly fixing the sidemenu

--- a/pages/programa.html
+++ b/pages/programa.html
@@ -7,8 +7,8 @@
     </div>
     <h1>Programa<h1>
     <div>
-      <p align="left">1. Bazele astrofizicii<p>
-      <ol align="left" type="a">
+      <p>1. Bazele astrofizicii<p>
+      <ol >
       <li>mecanica cerească - gravitația, elipsa, legile lui Kepler, mișcările stelelor, principiul conservării   energiei, sateliți, etc<br>
       *comete, sfera Hill, raza Roche, forțele mareeice, asteroizi</li><br>
       <li>teoria câmpului electromagnetic și elemente de fizică cuantică - spectrul undelor, lungimea de undă, radiația corpului negru, legea lui Wien, unde electromagnetice, proprietățile cuantice ale<br>luminii, cuante de lumină, energia cuantelor, formula lui Einstein, efectul Doppler - Fizeau, efectul   Einstein, efectul Zeeman</li><br>
@@ -18,30 +18,30 @@
       </ol>
     </div>
     <div>
-      <p align="left">2. Coordonate și timpi<p>
-      <ol align="left" type="a">
+      <p >2. Coordonate și timpi<p>
+      <ol >
       <li>sfera cerească - trigonometrie sferică, coordonate cerești, echinocțiu și solstițiu, stele   circumpolare, constelații, ecliptica</li></br>
       <li>conceptul de timp - timp solar, timp sideral, timp zonal</li><br>
       </ol>
     </div>
     <div>
-      <p align="left">3. Sistemul Solar<p>
+      <p >3. Sistemul Solar<p>
     </div>
     <div>
-      <p align="left">​4. Fizica stelelor<p>
-      <ol align="left" type="a">
+      <p >​4. Fizica stelelor<p>
+      <ol>
       <li>proprietățile de baza ale stelelor - magnitudinea aparentă, magnitudinea absolută,   luminozitatea, legea lui Stefan-Boltzmann, determinarea distanțelor, temperatura efectivă,   determinarea razelor și a maselor, variabilități stelare, etc</li></br>
       <li>interiorul și atmosfera stelelor</li><br>
       <li>evoluția stelelor</li><br>
       </ol>
     </div>
     <div>
-      <p align="left">5. Hărți stelare.<p>
+      <p>5. Hărți stelare.<p>
     </div>
     <div>
-      <p align="left">6. Astronomie galactică, extragalactică și sisteme stelare</p>
+      <p>6. Astronomie galactică, extragalactică și sisteme stelare</p>
       <div class="list">
-        <ul style="list-style-type:disc; font-size: 25px;">
+        <ul>
           <li>sisteme binare</li>
           <li>roiuri de stele</li>
           <li>procesul de acreție</li>
@@ -50,7 +50,7 @@
         </ul>
       </div>
       <div class="list1">
-        <ul style="list-style-type:disc; font-size: 25px;">
+        <ul>
           <li>mediul interstelar</li>
           <li>stele variabile</li>
           <li>nove, supernove</li>
@@ -60,9 +60,9 @@
       </div>
     </div>
     <div>
-      <p align="left" style="padding-top: 250px;">7. Cosmologie elementară</p>
+      <p>7. Cosmologie elementară</p>
       <div class="list">
-        <ul style="list-style-type:disc; font-size: 25px;">
+        <ul >
           <li>legea lui Hubble</li>
           <li>expansiunea Universului</li>
           <li>Big Bang</li>
@@ -70,8 +70,8 @@
           <li>radiația cosmică de fond</li>
         </ul>
       </div>
-      <div class="list1">
-        <ul style="list-style-type:disc; font-size: 25px;">
+      <div class="list">
+        <ul >
           <li>deplasarea spre roșu</li>
           <li>filozofia cosmologiei</li>
           <li>teoria inflaționară (Guth)</li>
@@ -80,6 +80,4 @@
         </ul>
       </div>
     </div>
-    <div class="link">
-      <a href="https://docs.wixstatic.com/ugd/930015_4ff1748231f04ea3bf6a8011916727d8.pdf" class="button tranz">PDF</a>
-    </div>
+    <a href="https://docs.wixstatic.com/ugd/930015_4ff1748231f04ea3bf6a8011916727d8.pdf" class="button tranz">PDF</a>
