--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-``<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Astronomy Hub-beta</title>
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="AstronomyHub.css">
     <style></style>
   </head>
-  <body onload="loadDoc('/pages/homepage.html')">
+  <body >
     <aside>
           <figure>
               <img id="sideLogo" src='./res/common/AHL.png' />
