--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -1,5 +1,5 @@
   <div>
-    <video autoplay muted loop>
+    <video width="100%" autoplay muted loop>
         <source src="./res/homepage/logo.mp4" type="video/mp4">
             Your browser does not support the video tag.
     </video>
@@ -16,4 +16,4 @@
       De asemenea, daca esti elev din Cluj, te asteptam sa faci parte din grupul nostru.
       Organizam ore de pregatire pentru Olimpiada, nopti de observatie si multe altele!
   </p>
-  <a href="../lectii/index.html" class="cta">Incepe!</a>
+  <a onclick="loadDoc('/pages/teorie.html')" class="cta">Incepe!</a>
