--- a/pages/teorie.html
+++ b/pages/teorie.html
@@ -5,7 +5,7 @@
     <div class="cardgallery">
 
       <div class="card">
-        <img  class="thumbnail" src="../res/lectia_1/Kepler_2nd.gif" alt="Avatar" style="width:100%">
+        <img  class="thumbnail" src="../res/lectia_1/Kepler_2nd.gif" >
         <div class="cardcaption">
           <h4><b>mecanica orbitala 1</b></h4>
           <p>Elipsa si legile lui Kepler</p>
@@ -14,7 +14,7 @@
 
 
       <div class="card">
-        <img  class="thumbnail" src="../res/lectia_1/BrahesModel.gif" alt="Avatar" style="width:100%">
+        <img  class="thumbnail" src="../res/lectia_1/BrahesModel.gif" >
         <div class="cardcaption">
           <h4><b>mecanica orbitala 1</b></h4>
           <p>Elipsa si legile lui Kepler</p>
