--- a/index.html
+++ b/index.html
@@ -59,7 +59,53 @@
     </aside>
 
     <main id="main">
-      Lorem ipsum DRAGNEA sit amet, consectetur adipisicing elit. Repudiandae blanditiis ipsum ut, aliquam consectetur impedit sed provident inventore neque accusantium quasi reprehenderit magni, facere delectus beatae libero quaerat voluptates velit amet. Pariatur, culpa harum beatae architecto maiores ullam! Quidem nemo ex repellat sunt corporis similique illo nisi rerum doloremque enim possimus officiis at autem saepe, facere, consequuntur dolorem accusamus ab ad. Dolorem ullam porro distinctio error, quia itaque aperiam mollitia voluptates quod, ipsa optio repellat sint reiciendis eveniet facilis blanditiis aliquam animi. Possimus, ullam perspiciatis officia sunt eveniet! Modi autem quia sit repudiandae atque cum soluta tempore, quos. Facilis ullam quasi molestias vero beatae perspiciatis ipsam! Officia rem sint reiciendis laudantium labore, dolores possimus iste dolore nihil obcaecati saepe perferendis beatae, laboriosam nesciunt eveniet quam itaque nobis unde! Adipisci assumenda eveniet quis harum quisquam, ullam fuga quod consequatur autem debitis laboriosam aperiam, dolor cum itaque quibusdam asperiores corporis veniam consequuntur excepturi! Ipsam facere, repellendus modi accusantium, voluptatem expedita nesciunt voluptas soluta praesentium fugit maiores ea reiciendis sequi aperiam deserunt ut eaque provident laborum! Necessitatibus eum eligendi voluptatibus id sunt in illo assumenda cumque nemo eius, eveniet voluptatem, ullam. Aspernatur neque, eaque vero quam laborum suscipit laudantium temporibus nihil doloribus perferendis vitae maxime repellat esse nesciunt odit, nam nemo eum, mollitia impedit modi eos quasi. Dolores eos illo reprehenderit facilis eum autem suscipit voluptas omnis dolore sequi non similique nihil mollitia laboriosam ipsa atque vero, corporis asperiores placeat. Adipisci autem harum, explicabo obcaecati quas natus ad ab quam amet provident voluptatibus, veniam qui voluptate architecto suscipit minus. Esse rerum iste corrupti cumque voluptatem sed ut sequi reiciendis nesciunt molestias labore neque odio, magnam illo! Omnis et totam sapiente illo, quaerat libero hic. Ea dolor nesciunt maiores, qui facere impedit adipisci facilis, perferendis laborum illum atque repellendus deleniti eveniet! Dignissimos eligendi quisquam non esse officia, inventore ea placeat praesentium rerum libero facere minima, quae officiis. Voluptatem dignissimos excepturi animi quae nihil. At, vel omnis expedita architecto, amet qui ratione harum. Tempora reiciendis sit numquam explicabo minus, a necessitatibus est, odio nemo placeat reprehenderit. A amet, quae, deserunt porro temporibus quibusdam. Ipsam, eos, natus. Delectus maiores voluptatem, doloribus expedita repellendus accusamus quae, quis placeat, laborum itaque, soluta animi voluptatibus error quibusdam aliquam vero consectetur vitae molestias provident rerum fuga sit unde? Dolor eum eius, quod repellat aliquam illo expedita. Sapiente enim suscipit molestias quidem dolores debitis quasi obcaecati quis amet deserunt, accusantium, veniam, recusandae voluptates corporis earum error possimus voluptas velit asperiores aperiam odio quibusdam similique. Rem delectus unde voluptatum nisi, at consectetur quasi quidem distinctio dolor pariatur in libero veniam voluptas quod similique molestias quis! Commodi, impedit assumenda rem id, corrupti obcaecati cumque fugiat dolore neque! Saepe sint, laudantium nisi, doloremque error quia odio voluptas voluptatum ab soluta vel, corporis quidem dolor expedita! Odio tenetur labore omnis quas sed odit distinctio corporis laborum eligendi incidunt. Animi saepe inventore autem quisquam sit libero aspernatur. Aliquam voluptatem adipisci, voluptatum pariatur tempore. Neque quis autem at? Tempore ipsa id fugit quia, doloremque perspiciatis porro animi.
+      <pre>
+      # AstronomyHub
+      AstronomyHub Cluj
+
+      AstronomyHub is a community dedicated to popularizing astronomy and the Astronomy Olympiad.
+      Facebook page: https://www.facebook.com/astrohubcluj/
+
+      contains only *slight* amounts of badly written stuff
+
+      notes:
+      -content display only site for now. no upload functionality of any kind.
+      -we try to keep it as simple as possible. no libraries or frameworks so far,
+      just stock HTML and CSS, with only the absolutely necessary amount of Js.
+
+
+      latest update:
+      *AJAX has been successfully implemented*
+      side menu was changed from grid based to inline
+
+      next step:
+      re-add the sidemenu effects from the -legacy css *without* breaking the new menu
+    </pre>
+    <div class="cardgallery">
+
+      <div class="card" onclick="loadDoc('/pages/lectia_1.html')">
+        <img  class="thumbnail" src="../res/lectia_1/Kepler_2nd.gif" >
+        <div class="cardcaption">
+          <h4><b>Articol 1</b></h4>
+          <p>Elipsa si legile lui Kepler</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <img  class="thumbnail" src="../res/lectia_1/BrahesModel.gif" >
+        <div class="cardcaption">
+          <h4><b>Articol 2</b></h4>
+          <p>Elipsa si legile lui Kepler</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <img  class="thumbnail" src="../res/lectia_2/positional_01.png" >
+        <div class="cardcaption">
+          <h4><b>Articol 3</b></h4>
+          <p>Elipsa si legile lui Kepler</p>
+        </div>
+      </div>
     </main>
 
 
