--- a/pages/teorie.html
+++ b/pages/teorie.html
@@ -4,21 +4,29 @@
 
     <div class="cardgallery">
 
-      <div class="card">
-        <img  class="thumbnail" src="../res/lectia_1/Kepler_2nd.gif" >
+      <div class="card" onclick="loadDoc('/pages/lectia_1.html')">
+        <img  class="thumbnail" src="../res/lectia_1/Kepler_2nd.gif"  >
         <div class="cardcaption">
-          <h4><b>mecanica orbitala 1</b></h4>
+          <h4><b >mecanica orbitala 1</b></h4>
           <p>Elipsa si legile lui Kepler</p>
         </div>
       </div>
-
 
       <div class="card">
         <img  class="thumbnail" src="../res/lectia_1/BrahesModel.gif" >
         <div class="cardcaption">
+          <h4><b>mecanica orbitala 2</b></h4>
+          <p>Elipsa si legile lui Kepler</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <img  class="thumbnail" src="../res/lectia_2/positional_01.png" >
+        <div class="cardcaption">
           <h4><b>mecanica orbitala 1</b></h4>
           <p>Elipsa si legile lui Kepler</p>
         </div>
       </div>
+
 
     </div>
