homepage on load

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -5,8 +5,8 @@
     </video>
   </div>
 
-  
-  <h1>Bine ati venit !</h1>
+
+  <h1>Bine ati venit !!</h1>
   <p>
       Daca te pasioneaza universul, vrei sa studiezi astronomia si astrofizica
       sau vrei doar sa te relaxezi citind despre acestea ai ajuns in locul potrivit.
@@ -17,3 +17,28 @@
       Organizam ore de pregatire pentru Olimpiada, nopti de observatie si multe altele!
   </p>
   <a onclick="loadDoc('/pages/teorie.html')" class="cta">Incepe!</a>
+  <div class="cardgallery">
+
+    <div class="card" onclick="loadDoc('/pages/lectia_1.html')">
+      <img  class="thumbnail" src="../res/lectia_1/Kepler_2nd.gif" >
+      <div class="cardcaption">
+        <h4><b>Articol 1</b></h4>
+        <p>Elipsa si legile lui Kepler</p>
+      </div>
+    </div>
+
+    <div class="card">
+      <img  class="thumbnail" src="../res/lectia_1/BrahesModel.gif" >
+      <div class="cardcaption">
+        <h4><b>Articol 2</b></h4>
+        <p>Elipsa si legile lui Kepler</p>
+      </div>
+    </div>
+
+    <div class="card">
+      <img  class="thumbnail" src="../res/lectia_2/positional_01.png" >
+      <div class="cardcaption">
+        <h4><b>Articol 3</b></h4>
+        <p>Elipsa si legile lui Kepler</p>
+      </div>
+    </div>
