temporarily linked new article to "materiale" tab  Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </li>
 
           <li>
-              <a onclick="loadDoc('/pages/despre.html')" >Despre Noi</a>
+              <a onclick="loadDoc('/pages/LightSail2.docx.html')" >Despre Noi</a>
           </li>
         </ul>
       </nav>
