add some formulae

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -35,8 +35,8 @@
       </div>
     </div>
 
-    <div class="card">
-      <img  class="thumbnail" src="../res/lectia_2/positional_01.png" >
+    <div class="card" onclick="loadDoc('/pages/LightSail2.docx.html')">
+      <img  class="thumbnail" src="./pages/images/image1.png" >
       <div class="cardcaption">
         <h4><b>Articol 3</b></h4>
         <p>Elipsa si legile lui Kepler</p>
