--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -11,7 +11,7 @@
       Daca te pasioneaza universul, vrei sa studiezi astronomia si astrofizica
       sau vrei doar sa te relaxezi citind despre acestea ai ajuns in locul potrivit.
   </p>
-  <p>Carti, articole, filme, lunk-uri, aici puteti gasi absolut tot in legatura cu astronomia</p>
+  <p>Carti, articole, filme, link-uri, aici puteți gasi absolut tot in legatura cu astronomia</p>
   <p>
       De asemenea, daca esti elev din Cluj, te asteptam sa faci parte din grupul nostru.
       Organizam ore de pregatire pentru Olimpiada, nopti de observatie si multe altele!
